<resources>
    <string name="app_name">chap4_Ex3</string>
    <string name="hello">안녕하세요?</string>
    <string name="bnt1">버튼1</string>
    <string name="bnt2">버튼2</string>
    <string name="bnt3">버튼3</string>
    <string name="bnt4">버튼4</string>
    <string name="bnt5">버튼5</string>
    <string name="text1">이건 text view 입니다.</string>
    <string name="edit1">이건 edit text 입니다.</string>

    <string name="te1">텍스트뷰 연습 1 </string>
    <string name="te2">텍스트뷰 연습 3 </string>
    <string name="te3">텍스트뷰 연습 2 </string>

    <string name="t1">textSize 속성</string>
    <string name="t2">textColor 속성</string>
    <string name="t3">textStyle 속성</string>
    <string name="t4">typeface 속성</string>
    <string name="t5">singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성 singleLine 속성</string>

</resources>