<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:padding="30dp"
    android:layout_height="match_parent">
    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/bnt1"
    android:layout_marginBottom="20dp"
    android:backgroundTint="#00ff00"
    android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:backgroundTint="#747474"
        android:layout_marginBottom="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#309EF6"
        android:textColor="#0000ff"
        android:layout_marginBottom="20dp"
        android:text="@string/edit1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/bnt2"
        android:textColor="#4D4D4D"
        android:enabled="false"/>
</LinearLayout>